[package]
name = "detokenizer-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
bigdecimal = {version = "0.3.0", features = ["serde"] }
base64 = "0.13.0"
thiserror = "1.0.29"
anyhow = "1.0"
openssl = { version = "0.10.38", features = ["vendored"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3